twopad: Hack in SDL controller support. Works, but assumes every controller is pad 0, and is unmappable.

--- a/plugins/twopad/CMakeLists.txt
+++ b/plugins/twopad/CMakeLists.txt
@@ -26,13 +26,15 @@ linux/keyboard_x11.h)
 set(twopadSources
     twopad.cpp
     poll.cpp
-    ps2_pad.cpp)
+    ps2_pad.cpp
+    sdl_controller.cpp)
 
 # twopad headers
 set(twopadHeaders
     twopad.h
     poll.h
-    ps2_pad.h)
+    ps2_pad.h
+    sdl_controller.h)
 
 if(Windows)
     # to be added.
