Hack in a currently non-functional dialog box.
The reverse LX/LY settings work (but aren't persistant between sessions yet).

All the controls are hooked up (except rumble, which is disabled).

--- a/plugins/twopad/CMakeLists.txt
+++ b/plugins/twopad/CMakeLists.txt
@@ -24,6 +24,7 @@ linux/keyboard_x11.h)
 
 # twopad sources
 set(twopadSources
+    dialog.cpp
     twopad.cpp
     poll.cpp
     ps2_pad.cpp
@@ -31,6 +32,7 @@ set(twopadSources
 
 # twopad headers
 set(twopadHeaders
+    dialog.h
     twopad.h
     poll.h
     ps2_pad.h
