--- a/plugins/LilyPad/LilyPad.vcxproj
+++ b/plugins/LilyPad/LilyPad.vcxproj
@@ -80,6 +80,7 @@
     <ClCompile Include="Devices\XInputEnum.cpp" />
     <ClCompile Include="DeviceEnumerator.cpp" />
     <ClCompile Include="InputManager.cpp" />
+    <ClCompile Include="Devices.cpp" />
     <ClCompile Include="Windows\VKey.cpp" />
     <ClCompile Include="Windows\WndProcEater.cpp" />
   </ItemGroup>
@@ -101,6 +102,7 @@
     <ClInclude Include="Devices\XInputEnum.h" />
     <ClInclude Include="DeviceEnumerator.h" />
     <ClInclude Include="InputManager.h" />
+    <ClInclude Include="Devices.h" />
     <ClInclude Include="Windows\VKey.h" />
     <ClInclude Include="Windows\WndProcEater.h" />
   </ItemGroup>
