Gamepad->Device. EnumerateGamepads is now EnumerateDevices and not a member. JoystickInfo->SDL2Gamepad.

--- a/pcsx2/CMakeLists.txt
+++ b/pcsx2/CMakeLists.txt
@@ -485,8 +485,8 @@ add_custom_command(
 # PAD/Linux sources 
 set(pcsx2PADSources
     PAD/Linux/controller.cpp
-    PAD/Linux/GamePad.cpp
-    PAD/Linux/SDL/joystick.cpp
+    PAD/Linux/Device.cpp
+    PAD/Linux/SDL/SDL2Gamepad.cpp
     PAD/Linux/X11Keyboard.cpp
     PAD/Linux/MacKeyboard.cpp
     PAD/Linux/KeyStatus.cpp
@@ -505,8 +505,8 @@ set(pcsx2PADSources
 set(pcsx2PADHeaders
     PAD/Linux/bitwise.h
     PAD/Linux/controller.h
-    PAD/Linux/GamePad.h
-    PAD/Linux/SDL/joystick.h
+    PAD/Linux/Device.h
+    PAD/Linux/SDL/SDL2Gamepad.h
     PAD/Linux/keyboard.h
     PAD/Linux/KeyStatus.h
     PAD/Linux/PAD.h
