--- a/pcsx2/CMakeLists.txt
+++ b/pcsx2/CMakeLists.txt
@@ -496,7 +496,7 @@ set(pcsx2PADSources
     PAD/Linux/wx_dialog/opPanel.cpp
     PAD/Linux/wx_dialog/GamepadConfiguration.cpp
     PAD/Linux/wx_dialog/JoystickConfiguration.cpp
-    PAD/Linux/ini.cpp
+    PAD/Linux/config.cpp
     PAD/Linux/linux.cpp
     ${CMAKE_BINARY_DIR}/pcsx2/PAD/Linux/resources_pad.cpp
     )
@@ -505,6 +505,7 @@ set(pcsx2PADSources
 set(pcsx2PADHeaders
     PAD/Linux/bitwise.h
     PAD/Linux/controller.h
+    PAD/Linux/config.h
     PAD/Linux/Device.h
     PAD/Linux/SDL/SDL2Gamepad.h
     PAD/Linux/keyboard.h
