--- a/plugins/GSdx/GSdx-SSE2.vcxproj
+++ b/plugins/GSdx/GSdx-SSE2.vcxproj
@@ -20,11 +20,11 @@
   </ItemGroup>
   <Import Project="$(SolutionDir)common\vsprops\WinSDK.props" />
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{18E42F6F-3A62-41EE-B42F-79366C4F1E95}</ProjectGuid>
+    <ProjectGuid>{FF7BC2C4-C3D9-45DF-8672-270853931972}</ProjectGuid>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <PlatformToolset>$(DefaultPlatformToolset)</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
     <WholeProgramOptimization Condition="$(Configuration.Contains(Release))">true</WholeProgramOptimization>
@@ -36,64 +36,63 @@
   <ImportGroup Label="PropertySheets">
     <Import Project="vsprops\ProjectRootDir.props" />
     <Import Project="vsprops\common.props" />
-    <Import Project="vsprops\plugin-out.props" />
     <Import Condition="$(Configuration.Contains(Debug))" Project="vsprops\debug.props" />
     <Import Condition="$(Configuration.Contains(Release))" Project="vsprops\release.props" />
     <Import Condition="'$(Platform)'=='Win32'" Project="vsprops\x86.props" />
     <Import Condition="'$(Platform)'=='x64'" Project="vsprops\x64.props" />
   </ImportGroup>
-  <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
       <PrecompiledHeader>Use</PrecompiledHeader>
+      <EnableEnhancedInstructionSet Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
+      <EnableEnhancedInstructionSet Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">AdvancedVectorExtensions</EnableEnhancedInstructionSet>
+      <EnableEnhancedInstructionSet Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
+      <EnableEnhancedInstructionSet Condition="'$(Configuration)|$(Platform)'=='Release|x64'">AdvancedVectorExtensions</EnableEnhancedInstructionSet>
+      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">_M_SSE=0x200;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">_M_SSE=0x200;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">_M_SSE=0x200;NDEBUG;_SECURE_SCL=0;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|x64'">_M_SSE=0x200;NDEBUG;_SECURE_SCL=0;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
-    <Link>
-      <ModuleDefinitionFile>.\GSdx.def</ModuleDefinitionFile>
-      <TargetMachine Condition="'$(Platform)'=='Win32'">MachineX86</TargetMachine>
-      <TargetMachine Condition="'$(Platform)'=='x64'">MachineX64</TargetMachine>
-    </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Renderers\OpenGL\GLLoader.cpp" />
-    <ClCompile Include="Renderers\OpenGL\GLState.cpp" />
-    <ClCompile Include="GS.cpp" />
-    <ClCompile Include="GSAlignedClass.cpp" />
-    <ClCompile Include="GSCapture.cpp" />
-    <ClCompile Include="Window\GSCaptureDlg.cpp" />
-    <ClCompile Include="GSCodeBuffer.cpp" />
-    <ClCompile Include="GSCrc.cpp" />
-    <ClCompile Include="Renderers\Common\GSDevice.cpp" />
-    <ClCompile Include="Renderers\DX11\GSDevice11.cpp" />
+    <ClCompile Include="GSBlock.cpp" />
+    <ClCompile Include="GSClut.cpp" />
     <ClCompile Include="Renderers\Null\GSDeviceNull.cpp" />
-    <ClCompile Include="Renderers\OpenGL\GSDeviceOGL.cpp" />
-    <ClCompile Include="Window\GSDialog.cpp" />
-    <ClCompile Include="GSDump.cpp" />
-    <ClCompile Include="GSdx.cpp" />
-    <ClCompile Include="GSLzma.cpp" />
-    <ClCompile Include="GSPerfMon.cpp" />
-    <ClCompile Include="Renderers\Common\GSOsdManager.cpp" />
-    <ClCompile Include="GSPng.cpp" />
-    <ClCompile Include="Window\GSSetting.cpp" />
-    <ClCompile Include="Window\GSSettingsDlg.cpp" />
-    <ClCompile Include="Renderers\OpenGL\GSShaderOGL.cpp" />
-    <ClCompile Include="GSTables.cpp" />
-    <ClCompile Include="Renderers\Common\GSTexture.cpp" />
-    <ClCompile Include="Renderers\DX11\GSTexture11.cpp" />
-    <ClCompile Include="Renderers\OpenGL\GSTextureOGL.cpp" />
-    <ClCompile Include="Renderers\DX11\GSTextureFX11.cpp" />
-    <ClCompile Include="Renderers\Null\GSTextureNull.cpp" />
-    <ClCompile Include="Renderers\SW\GSTextureSW.cpp" />
-    <ClCompile Include="GSUtil.cpp" />
-    <ClCompile Include="GSVector.cpp" />
-    <ClCompile Include="Renderers\Common\GSVertexList.cpp" />
-    <ClCompile Include="Renderers\SW\GSVertexSW.cpp" />
-    <ClCompile Include="Window\GSWnd.cpp" />
-    <ClCompile Include="Window\GSWndDX.cpp" />
-    <ClCompile Include="Window\GSWndWGL.cpp" />
-    <ClCompile Include="MultiISA.cpp" />
+    <ClCompile Include="Renderers\Common\GSDirtyRect.cpp" />
+    <ClCompile Include="GSDrawingContext.cpp" />
+    <ClCompile Include="Renderers\SW\GSDrawScanline.cpp" />
+    <ClCompile Include="Renderers\SW\GSDrawScanlineCodeGenerator.cpp" />
+    <ClCompile Include="Renderers\SW\GSDrawScanlineCodeGenerator.x64.avx.cpp" />
+    <ClCompile Include="Renderers\SW\GSDrawScanlineCodeGenerator.x64.avx2.cpp" />
+    <ClCompile Include="Renderers\SW\GSDrawScanlineCodeGenerator.x64.cpp" />
+    <ClCompile Include="Renderers\SW\GSDrawScanlineCodeGenerator.x86.avx.cpp" />
+    <ClCompile Include="Renderers\SW\GSDrawScanlineCodeGenerator.x86.avx2.cpp" />
+    <ClCompile Include="Renderers\SW\GSDrawScanlineCodeGenerator.x86.cpp" />
+    <ClCompile Include="Renderers\HW\GSHwHack.cpp" />
+    <ClCompile Include="GSLocalMemory.cpp" />
+    <ClCompile Include="Renderers\SW\GSRasterizer.cpp" />
+    <ClCompile Include="Renderers\Common\GSRenderer.cpp" />
+    <ClCompile Include="Renderers\DX11\GSRendererDX11.cpp" />
+    <ClCompile Include="Renderers\HW\GSRendererHW.cpp" />
+    <ClCompile Include="Renderers\Null\GSRendererNull.cpp" />
+    <ClCompile Include="Renderers\OpenGL\GSRendererOGL.cpp" />
+    <ClCompile Include="Renderers\SW\GSRendererSW.cpp" />
+    <ClCompile Include="Renderers\SW\GSSetupPrimCodeGenerator.cpp" />
+    <ClCompile Include="Renderers\SW\GSSetupPrimCodeGenerator.x64.avx.cpp" />
+    <ClCompile Include="Renderers\SW\GSSetupPrimCodeGenerator.x64.avx2.cpp" />
+    <ClCompile Include="Renderers\SW\GSSetupPrimCodeGenerator.x64.cpp" />
+    <ClCompile Include="Renderers\SW\GSSetupPrimCodeGenerator.x86.avx.cpp" />
+    <ClCompile Include="Renderers\SW\GSSetupPrimCodeGenerator.x86.avx2.cpp" />
+    <ClCompile Include="Renderers\SW\GSSetupPrimCodeGenerator.x86.cpp" />
+    <ClCompile Include="GSState.cpp" />
+    <ClCompile Include="Renderers\HW\GSTextureCache.cpp" />
+    <ClCompile Include="Renderers\DX11\GSTextureCache11.cpp" />
+    <ClCompile Include="Renderers\OpenGL\GSTextureCacheOGL.cpp" />
+    <ClCompile Include="Renderers\SW\GSTextureCacheSW.cpp" />
+    <ClCompile Include="Renderers\Common\GSVertexTrace.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
@@ -104,8 +103,10 @@
     <ClInclude Include="Renderers\OpenGL\GLState.h" />
     <ClInclude Include="GS.h" />
     <ClInclude Include="GSAlignedClass.h" />
+    <ClInclude Include="GSBlock.h" />
     <ClInclude Include="GSCapture.h" />
     <ClInclude Include="Window\GSCaptureDlg.h" />
+    <ClInclude Include="GSClut.h" />
     <ClInclude Include="GSCodeBuffer.h" />
     <ClInclude Include="GSCrc.h" />
     <ClInclude Include="Renderers\Common\GSDevice.h" />
@@ -113,23 +114,42 @@
     <ClInclude Include="Renderers\Null\GSDeviceNull.h" />
     <ClInclude Include="Renderers\OpenGL\GSDeviceOGL.h" />
     <ClInclude Include="Window\GSDialog.h" />
+    <ClInclude Include="Renderers\Common\GSDirtyRect.h" />
+    <ClInclude Include="GSDrawingContext.h" />
     <ClInclude Include="GSDrawingEnvironment.h" />
+    <ClInclude Include="Renderers\SW\GSDrawScanline.h" />
+    <ClInclude Include="Renderers\SW\GSDrawScanlineCodeGenerator.h" />
     <ClInclude Include="GSDump.h" />
     <ClInclude Include="GSdx.h" />
     <ClInclude Include="Renderers\Common\GSFastList.h" />
+    <ClInclude Include="Renderers\Common\GSFunctionMap.h" />
+    <ClInclude Include="GSLocalMemory.h" />
     <ClInclude Include="GSLzma.h" />
     <ClInclude Include="GSPerfMon.h" />
     <ClInclude Include="Renderers\Common\GSOsdManager.h" />
     <ClInclude Include="GSPng.h" />
+    <ClInclude Include="Renderers\SW\GSRasterizer.h" />
     <ClInclude Include="Renderers\Common\IGSRenderer.h" />
+    <ClInclude Include="Renderers\Common\GSRenderer.h" />
+    <ClInclude Include="Renderers\DX11\GSRendererDX11.h" />
+    <ClInclude Include="Renderers\HW\GSRendererHW.h" />
+    <ClInclude Include="Renderers\Null\GSRendererNull.h" />
+    <ClInclude Include="Renderers\OpenGL\GSRendererOGL.h" />
+    <ClInclude Include="Renderers\SW\GSRendererSW.h" />
     <ClInclude Include="Renderers\SW\GSScanlineEnvironment.h" />
     <ClInclude Include="Window\GSSetting.h" />
     <ClInclude Include="Window\GSSettingsDlg.h" />
+    <ClInclude Include="Renderers\SW\GSSetupPrimCodeGenerator.h" />
     <ClInclude Include="Renderers\OpenGL\GSShaderOGL.h" />
+    <ClInclude Include="GSState.h" />
     <ClInclude Include="GSTables.h" />
     <ClInclude Include="Renderers\Common\GSTexture.h" />
     <ClInclude Include="Renderers\DX11\GSTexture11.h" />
     <ClInclude Include="Renderers\OpenGL\GSTextureOGL.h" />
+    <ClInclude Include="Renderers\HW\GSTextureCache.h" />
+    <ClInclude Include="Renderers\DX11\GSTextureCache11.h" />
+    <ClInclude Include="Renderers\OpenGL\GSTextureCacheOGL.h" />
+    <ClInclude Include="Renderers\SW\GSTextureCacheSW.h" />
     <ClInclude Include="Renderers\Null\GSTextureNull.h" />
     <ClInclude Include="Renderers\SW\GSTextureSW.h" />
     <ClInclude Include="GSThread.h" />
@@ -146,6 +166,7 @@
     <ClInclude Include="Renderers\HW\GSVertexHW.h" />
     <ClInclude Include="Renderers\Common\GSVertexList.h" />
     <ClInclude Include="Renderers\SW\GSVertexSW.h" />
+    <ClInclude Include="Renderers\Common\GSVertexTrace.h" />
     <ClInclude Include="Window\GSWnd.h" />
     <ClInclude Include="Window\GSWndDX.h" />
     <ClInclude Include="Window\GSWndWGL.h" />
@@ -159,7 +180,6 @@
     <ClInclude Include="xbyak\xbyak_util.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="GSdx.def" />
     <None Include="res\fxaa.fx" />
     <None Include="res\convert.fx" />
     <None Include="res\interlace.fx" />
@@ -194,18 +214,6 @@
     </ProjectReference>
     <ProjectReference Include="..\..\3rdparty\baseclasses\baseclasses.vcxproj">
       <Project>{27f17499-a372-4408-8afa-4f9f4584fbd3}</Project>
-    </ProjectReference>
-    <ProjectReference Include="GSdx-AVX.vcxproj">
-      <Project>{a7ebd3a6-479b-4293-8613-bf7ad44cd3d0}</Project>
-    </ProjectReference>
-    <ProjectReference Include="GSdx-AVX2.vcxproj">
-      <Project>{a7ebd3a6-479b-4293-8613-bf7ad44cd3d0}</Project>
-    </ProjectReference>
-    <ProjectReference Include="GSdx-SSE2.vcxproj">
-      <Project>{ff7bc2c4-c3d9-45df-8672-270853931972}</Project>
-    </ProjectReference>
-    <ProjectReference Include="GSdx-SSE4.vcxproj">
-      <Project>{ec416c52-c9e5-41df-bce3-eca20af51989}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
