--- a/plugins/GSdx/vsprops/release.props
+++ b/plugins/GSdx/vsprops/release.props
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <_ProjectFileVersion>10.0.30128.1</_ProjectFileVersion>
     <LinkIncremental>false</LinkIncremental>
-    <TargetName>$(ProjectName)$(PlatformArchitecture)-$(SSEtype)</TargetName>
+    <TargetName>$(ProjectName)-$(PlatformArchitecture)</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
