--- a/pcsx2/pcsx2.vcxproj
+++ b/pcsx2/pcsx2.vcxproj
@@ -332,8 +332,17 @@
     <ClCompile Include="IopGte.cpp" />
     <ClCompile Include="IPC.cpp" />
     <ClCompile Include="FW.cpp" />
+    <ClCompile Include="Memcard\Memcard.cpp" />
+    <ClCompile Include="Memcard\PS1\MemcardPS1.cpp" />
+    <ClCompile Include="Memcard\PS1\MemcardPS1Protocol.cpp" />
+    <ClCompile Include="Memcard\PS2\MemcardPS2.cpp" />
+    <ClCompile Include="Memcard\PS2\MemcardPS2Protocol.cpp" />
     <ClCompile Include="MemoryCardFile.cpp" />
     <ClCompile Include="MemoryCardFolder.cpp" />
+    <ClCompile Include="PAD\PS1\PadPS1.cpp" />
+    <ClCompile Include="PAD\PS1\PadPS1Protocol.cpp" />
+    <ClCompile Include="PAD\PS2\PadPS2.cpp" />
+    <ClCompile Include="PAD\PS2\PadPS2Protocol.cpp" />
     <ClCompile Include="PAD\Windows\PADConfig.cpp" />
     <ClCompile Include="PAD\Windows\DeviceEnumerator.cpp" />
     <ClCompile Include="PAD\Windows\Diagnostics.cpp" />
@@ -352,6 +361,8 @@
     <ClCompile Include="PAD\Windows\WndProcEater.cpp" />
     <ClCompile Include="PAD\Windows\XInputEnum.cpp" />
     <ClCompile Include="Recording\Utilities\InputRecordingLogger.cpp" />
+    <ClCompile Include="Sio0.cpp" />
+    <ClCompile Include="Sio2.cpp" />
     <ClCompile Include="SPU2\DplIIdecoder.cpp" />
     <ClCompile Include="SPU2\debug.cpp" />
     <ClCompile Include="SPU2\RegLog.cpp" />
@@ -770,9 +781,25 @@
     <ClInclude Include="IopGte.h" />
     <ClInclude Include="IPC.h" />
     <ClInclude Include="FW.h" />
+    <ClInclude Include="MemcardTypes.h" />
+    <ClInclude Include="Memcard\Memcard.h" />
+    <ClInclude Include="Memcard\PS1\MemcardPS1.h" />
+    <ClInclude Include="Memcard\PS1\MemcardPS1Protocol.h" />
+    <ClInclude Include="Memcard\PS1\MemcardPS1Types.h" />
+    <ClInclude Include="Memcard\PS2\MemcardPS2.h" />
+    <ClInclude Include="Memcard\PS2\MemcardPS2Protocol.h" />
+    <ClInclude Include="Memcard\PS2\MemcardPS2Types.h" />
     <ClInclude Include="MemoryCardFile.h" />
     <ClInclude Include="MemoryCardFolder.h" />
     <ClInclude Include="PAD\Gamepad.h" />
+    <ClInclude Include="PAD\PadTypes.h" />
+    <ClInclude Include="PAD\PS1\PadPS1.h" />
+    <ClInclude Include="PAD\PS1\PadPS1Protocol.h" />
+    <ClInclude Include="PAD\PS1\PadPS1Types.h" />
+    <ClInclude Include="PAD\PS2\PadPS2.h" />
+    <ClInclude Include="PAD\PS2\PadPS2Protocol.h" />
+    <ClInclude Include="PAD\PS2\PadPS2Types.h" />
+    <ClInclude Include="PAD\Windows\PAD.h" />
     <ClInclude Include="PAD\Windows\PADConfig.h" />
     <ClInclude Include="PAD\Windows\DeviceEnumerator.h" />
     <ClInclude Include="PAD\Windows\Diagnostics.h" />
@@ -792,6 +819,11 @@
     <ClInclude Include="PAD\Windows\WindowsMouse.h" />
     <ClInclude Include="PAD\Windows\WndProcEater.h" />
     <ClInclude Include="PAD\Windows\XInputEnum.h" />
+    <ClInclude Include="Sio0.h" />
+    <ClInclude Include="Sio0Types.h" />
+    <ClInclude Include="Sio2.h" />
+    <ClInclude Include="Sio2Types.h" />
+    <ClInclude Include="SioTypes.h" />
     <ClInclude Include="SPU2\Config.h" />
     <ClInclude Include="SPU2\Global.h" />
     <ClInclude Include="SPU2\interpolate_table.h" />
