--- a/bin/resources/GameIndex.yaml
+++ b/bin/resources/GameIndex.yaml
@@ -2071,6 +2071,7 @@ SCES-50408:
   compat: 5
   speedHacks:
     InstantVU1SpeedHack: 0  # Fixes noodles.
+    MTVUSpeedHack: 0
 SCES-50409:
   name: "MotoGP 2"
   region: "PAL-M5"
@@ -2088,6 +2089,7 @@ SCES-50459:
   compat: 2
   speedHacks:
     InstantVU1SpeedHack: 0
+    MTVUSpeedHack: 0
 SCES-50490:
   name: "Final Fantasy X"
   region: "PAL-E"
@@ -3957,6 +3959,7 @@ SCKA-20092:
   region: "NTSC-K"
   speedHacks: 
     InstantVU1SpeedHack: 0  # Fixes random black frames from happening when in a fight session.
+    MTVUSpeedHack: 0
   gameFixes:
     - XGKickHack # Fixes grey fighters problem.
 SCKA-20096:
@@ -4216,6 +4219,7 @@ SCPS-15017:
   region: "NTSC-J"
   speedHacks:
     InstantVU1SpeedHack: 0  # Fixes noodles.
+    MTVUSpeedHack: 0
 SCPS-15018:
   name: "Train Simulator Real, The - Yamanote Sen"
   region: "NTSC-J"
@@ -4716,6 +4720,7 @@ SCPS-19201:
   region: "NTSC-J"
   speedHacks:
     InstantVU1SpeedHack: 0  # Fixes noodles.
+    MTVUSpeedHack: 0
 SCPS-19202:
   name: "Extermination [PlayStation 2 The Best]"
   region: "NTSC-J"
@@ -5525,6 +5530,7 @@ SCUS-97167:
   compat: 5
   speedHacks:
     InstantVU1SpeedHack: 0  # Fixes noodles.
+    MTVUSpeedHack: 0
 SCUS-97169:
   name: "Drakan - The Ancients' Gates [Demo]"
   region: "NTSC-U"
@@ -5655,6 +5661,7 @@ SCUS-97208:
   region: "NTSC-U"
   speedHacks:
     InstantVU1SpeedHack: 0  # Fixes noodles on Parappa 2.
+    MTVUSpeedHack: 0
 SCUS-97209:
   name: "Ratchet & Clank [E3 Demo]"
   region: "NTSC-U"
@@ -8028,6 +8035,7 @@ SLES-50382:
   compat: 5
   speedHacks:
     InstantVU1SpeedHack: 0  # Fixes hang on FMV's when CDVD timing is accurate.
+    MTVUSpeedHack: 0
 SLES-50383:
   name: "Metal Gear Solid 2 - Sons of Liberty"
   region: "PAL-M3"
@@ -8159,6 +8167,7 @@ SLES-50446:
     - EETimingHack # Fixes cutscene freezes. 
   speedHacks:
     InstantVU1SpeedHack: 0  # Fixes SPS.
+    MTVUSpeedHack: 0
 SLES-50447:
   name: "All-Star Baseball 2003"
   region: "PAL-E"
@@ -8420,6 +8429,7 @@ SLES-50608:
     - EETimingHack # Fixes cutscene freezes. 
   speedHacks:
     InstantVU1SpeedHack: 0  # Fixes SPS.
+    MTVUSpeedHack: 0
 SLES-50613:
   name: "Woody Woodpecker"
   region: "PAL-M5"
@@ -9523,6 +9533,7 @@ SLES-51156:
   compat: 5
   speedHacks:
     InstantVU1SpeedHack: 0  # Fixes hang on FMV's when CDVD timing is accurate.
+    MTVUSpeedHack: 0
 SLES-51157:
   name: "Silent Scope 3"
   region: "PAL-M5"
@@ -19837,6 +19848,7 @@ SLPM-61009:
   region: "NTSC-J"
   speedHacks:
     InstantVU1SpeedHack: 0  # Fixes hang on FMV's when CDVD timing is accurate.
+    MTVUSpeedHack: 0
 SLPM-61010:
   name: "Devil May Cry [Trial Version]"
   region: "NTSC-J"
@@ -19845,6 +19857,7 @@ SLPM-61011:
   region: "NTSC-J"
   speedHacks:
     InstantVU1SpeedHack: 0  # Fixes hang on FMV's when CDVD timing is accurate.
+    MTVUSpeedHack: 0
 SLPM-61018:
   name: "Abarenbou Princess [Trial]"
   region: "NTSC-J"
@@ -22034,6 +22047,7 @@ SLPM-65051:
   compat: 5
   speedHacks:
     InstantVU1SpeedHack: 0  # Fixes hang on FMV's when CDVD timing is accurate.
+    MTVUSpeedHack: 0
 SLPM-65052:
   name: "Guitar Freaks 4th Mix & Drummania 3rd Mix"
   region: "NTSC-J"
@@ -22201,6 +22215,7 @@ SLPM-65098:
   compat: 5
   speedHacks:
     InstantVU1SpeedHack: 0  # Fixes hang on FMV's when CDVD timing is accurate.
+    MTVUSpeedHack: 0
 SLPM-65100:
   name: "Onimusha 2"
   region: "NTSC-J"
@@ -22884,6 +22899,7 @@ SLPM-65341:
   region: "NTSC-J"
   speedHacks:
     InstantVU1SpeedHack: 0  # Fixes hang on FMV's when CDVD timing is accurate.
+    MTVUSpeedHack: 0
 SLPM-65342:
   name: "Kyoufu Shinbun (Heisei) Kaiki! Shinrei File"
   region: "NTSC-J"
@@ -22968,6 +22984,7 @@ SLPM-65374:
   region: "NTSC-J"
   speedHacks:
     InstantVU1SpeedHack: 0  # Fixes hanging while going ingame.
+    MTVUSpeedHack: 0
 SLPM-65375:
   name: "Shin Sangoku Musou 3 - Mushoden [Premium Pack]"
   region: "NTSC-J"
@@ -23745,6 +23762,7 @@ SLPM-65631:
   region: "NTSC-J"
   speedHacks:
     InstantVU1SpeedHack: 0  # Fixes hang on FMV's when CDVD timing is accurate.
+    MTVUSpeedHack: 0
 SLPM-65632:
   name: "Virtua Fighter Cyber Generation - Ambition of the Judgement Six"
   region: "NTSC-J"
@@ -31821,6 +31839,7 @@ SLPS-25710:
   compat: 4
   speedHacks:
     InstantVU1SpeedHack: 0  # Fixes random black frames from happening when in a fight session.
+    MTVUSpeedHack: 0
   gameFixes:
     - XGKickHack # Fixes grey fighters problem.
   patches:
@@ -33793,6 +33812,7 @@ SLUS-20228:
   compat: 5
   speedHacks:
     InstantVU1SpeedHack: 0  # Fixes hang on FMV's when CDVD timing is accurate.
+    MTVUSpeedHack: 0
 SLUS-20229:
   name: "Jonny Moseley - Mad Trix"
   region: "NTSC-U"
@@ -34556,6 +34576,7 @@ SLUS-20413:
     - EETimingHack # Fixes cutscene freezes. 
   speedHacks:
     InstantVU1SpeedHack: 0  # Fixes SPS.
+    MTVUSpeedHack: 0
 SLUS-20414:
   name: "Legaia 2 - Duel Saga"
   region: "NTSC-U"
@@ -34763,6 +34784,7 @@ SLUS-20463:
   compat: 2
   speedHacks:
     InstantVU1SpeedHack: 0
+    MTVUSpeedHack: 0
 SLUS-20464:
   name: "Fugitive Hunter - War on Terror"
   region: "NTSC-U"
